innerHeight와 visualHeight 표시 요소 제작

--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
       <input type="text" id="input" />
     </footer>
 
+    <section id="calculator">
+      <ul>
+        <li id="inner-height"></li>
+        <li id="visual-height"></li>
+      </ul>
+    </section>
+    
     <script src="script.js"></script>
   </body>
 </html>
